--- a/diplomarbeit/sections/ch3_implementierung/konzept.tex
+++ b/diplomarbeit/sections/ch3_implementierung/konzept.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[scale=0.5]{images/konzept}
+	\includegraphics[scale=0.6]{images/konzept}
 	\caption{Konzept des BestShift Systems}
 \end{figure}
 
@@ -14,6 +14,6 @@ Der nächste Punkt ist die Erstellung eines Car-PC's. Dieser muss in einen DIN-S
 \nextline
 Als weitere Komponente kann man auf obiger Grafik ein Smartphone erkennen, welches eine Android-Applikation symbolisiert. Mithilfe dieser Adroid-App kann der Fahrer seinen Fahrstil analysieren und möglicherweise verbessern.
 \nextline
-SERVER!!!!!!
+Zusätzlich dazu wird die Android App verwendet um die gesammelten Sensordaten auf unsere Server zu laden. Jegliche weitere Applikation kann sich dann vom Server die benötigte Information besorgen.
 \nextline
-WEBAPP!!!!!!
+Die Fokus der Web-App liegt bei der nachträglichen Analyse und dem Vergleich von mehreren Fahrten. Die benötigten Sensordaten werden vom Server bezogen. Zusätzlich dazu können auf der Web-App Einträge für soziallen Plattformen erstellt werden.
