--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -123,6 +123,46 @@
     note = {Accessed on 24.03.2016}
 }
 
+@misc{MELD.CH3-vagrant.website, 
+    author = {HashiCorp},
+    year = {2016},
+    title = {Vagrant Webseite},
+    howpublished = "\url{https://www.vagrantup.com}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-vagrant.syncedFolders, 
+    author = {HashiCorp},
+    year = {2016},
+    title = {Vagrant Dokumentation: Synced Folders},
+    howpublished = "\url{https://www.vagrantup.com/docs/synced-folders/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-vagrant.providers, 
+    author = {HashiCorp},
+    year = {2016},
+    title = {Vagrant Dokumentation: Providers},
+    howpublished = "\url{https://www.vagrantup.com/docs/providers/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-virtualbox.website, 
+    author = {Oracle},
+    year = {2016},
+    title = {Oracle VirtualBox},
+    howpublished = "\url{https://www.virtualbox.org}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-ssh.website, 
+    author = {SSH Communications Security},
+    year = {2016},
+    title = {SSB Webseite},
+    howpublished = "\url{http://www.ssh.com}",
+    note = {Accessed on 30.03.2016}
+}
+
 @misc{MELD.CH3-redis.mainWebsite, 
     author = {Redis},
     year = {2016},
@@ -130,6 +170,15 @@
     howpublished = "\url{http://redis.io}",
     note = {Accessed on 30.03.2016}
 }
+
+@misc{MELD.CH3-redis.transhuge, 
+    author = {Linux Kernel Organization},
+    year = {2016},
+    title = {ransparent Hugepage Support},
+    howpublished = "\url{https://www.kernel.org/doc/Documentation/vm/transhuge.txt}",
+    note = {Accessed on 30.03.2016}
+}
+
 
 @misc{MELD.CH3-redis.documentation, 
     author = {Redis},
