--- a/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/os.tex
+++ b/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/os.tex
@@ -1,15 +1,16 @@
 \lfoot{Autor: Daniel Melichar}
 \subsubsection{Betriebssystem am Car-PC}
+\label{subsec:oscarpc}
 
-Der Car-PC muss gewisse Software Anforderungen erfüllen damit korrekt auf diesem Entwickelt werden kann. Dafür wurde die Rasbperry Pi Version (Raspbian) vom gängigen GNU/Linux OS Debian zur Hand genommen und die benötigte Software durch DevOps-Tools installiert.
+Der Car-PC muss gewisse Software Anforderungen erfüllen damit korrekt auf diesem entwickelt werden kann. Dafür wurde die Rasbperry Pi Version (Raspbian) vom gängigen GNU/Linux OS Debian verwendet und die benötigte Software installiert.
 
-Da die Hardware und Sensorik des Car-PC während der Laufzeit des Projekts stätig in Entwicklung war, musste eine Lösung gefunden werden, mittels welcher die Aufsetzung des Betriebssystem getestet werden kann. Hierfür wurde das Tool \textbf{Vagrant} verwendet. Damit kann man virtuelle Maschinen einfach erstellen und verwalten. 
+Da die Hardware und Sensorik des Car-PC während der Laufzeit des Projekts stetig in Entwicklung war, musste eine Lösung gefunden werden, mittels welcher die Verwendbarkeit des Betriebssystem getestet werden kann. Hierfür wurde das Tool Vagrant\cite{MELD.CH3-vagrant.website} verwendet. Damit kann man virtuelle Maschinen einfach erstellen und verwalten. 
 
-Für das Verwalten der virtuellen Maschinen muss man ein so gennantes \textit{Vagrantfile} erstellen und in diesem definieren, wie die Maschine aussehen soll. Für unseren Fall, sieht dies so aus.
+Für das Verwalten der virtuellen Maschinen wird ein so gennantes \textit{Vagrantfile} erstellt und in diesem definieren, wie die Maschine aussehen soll. Für unseren Fall, sieht dies so aus.
 
-\begin{lstlisting}[language=Ruby, caption=Vagrantfile]
+\begin{lstlisting}[language=Ruby, caption=Vagrantfile,numbers=left, xleftmargin=1cm, numberstyle=\tiny\noncopynumber]
 # Create a forwarded port mapping which allows access to a specific port
-# within the machine from a port on the host machine. In the example below,
+# within the machine from a port on the host machine. In the example below 
 # accessing "localhost:8080" will access port 80 on the guest machine.
 config.vm.network :forwarded_port, host: 8000, guest: 8000
 config.vm.network :forwarded_port, host: 9001, guest: 9001
@@ -69,7 +70,13 @@ config.vm.provision "shell" do |shell|
 end
 \end{lstlisting}
 
-Das Augenmerk sollte auf die letzten paar Zeilen gelegt werden - hier definieren wir die Skripte welche die benötigte Software installieren. In dem \textit{provision.sh} File werden dann alle weitern Skripte aufgerüfen und ausgeführt. Die benötigte Software wurde durch die Evaluation des Teams ermittelt. Im folgenden Snippet kann auf betrachtet werden, welche Software installiert wird.
+In den Zeilen 1-14 wird die Netzwerkstruktur der Maschine definiert. Durch die Verwendung von SSH \cite{MELD.CH3-ssh.website} und einem privaten Netzwerk ist es für das Team möglich einen einfachen Zugriff auf die Maschine zu bekommen.
+
+In den Zeilen 15-22 werden so genannte \textit{shared/synced folder} \cite{MELD.CH3-vagrant.syncedFolders} definiert. Damit können gewisse Ordner im System des Administrators, bzw. der Person, welche das Vagrantfile verwendet, auf der virtuellen Maschine verwendet werden. Das bedeutet konkret, dass alle Dateien eines Ordners im Hostsystem (z.B. Windows, OS X) auf das Guest-System (also das OS auf dem Car-PC) in einem äquivalenten Ordner kopiert. Bei unserem Vagrantfile werden die Ordner gesynced, in welchen sich die Skripte zur Installation der Software befinden.
+
+In den Zeilen 24-46 ist die Hostsystem spezifische Konfiguration zu finden. Hier ist zu beachten, dass wir mittels der kostenlosen Virtualisierungssoftware Oracle VirtualBox \cite{MELD.CH3-virtualbox.website} arbeiten - es sind aber auch andere Möglich \cite{MELD.CH3-vagrant.providers}. Wir definieren außerdem, dass wir die virtuelle Maschine ohne graphisches Interface starten, da wir nur über das CLI arbeiten. Ab der Zeile 32 werden die Hardware Spezifikationen der virtuellen Maschine beschrieben, diese sind abhängig vom Hostsystem. Allgemein werden 25\% des Arbeitsspeichers und alle CPU Kerne der Maschine zu verfügung gestellt. Diese Hardware Spezifikationen sind weit um einiges leistungsstärker als jene die dann letztendlich auf den Car-PC benötigt werden - sie wurden so hoch angesetzt um Leistungstests des Systems durchzuführen.
+
+In den Zeilen 52-58 definieren wir die Skripte welche die benötigte Software installieren. In dem \textit{provision.sh} File werden dann alle weitern Skripte aufgerufen und ausgeführt. Die benötigte Software wurde durch die Evaluation des Teams ermittelt. Im folgenden Snippet kann auf betrachtet werden, welche Software installiert wird.
 
 \begin{lstlisting}[language=bash, caption=provision.sh]
 pushd ~
@@ -90,10 +97,6 @@ source ./scripts/setup-redis.sh
 source ./scripts/setup-buildessential.sh
 source ./scripts/setup-python.sh
 source ./scripts/setup-java.sh
-
-# Setup BestShift (to come)
-#source ./scripts/setup-frontend.sh
-#source ./scripts/setup-backend.sh
 
 # Cleanup
 source ./scripts/cleanup.sh
