--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage[in]{fullpage}
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+\usepackage[utf8x]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{graphicx} 
 \usepackage{textcomp}
