--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -10,19 +10,22 @@ Die APK-Datei wird dann auf das Android-Gerät installiert.
 
 
 \textbf{Native vs HTML5 vs Hybrid}
+\todo{Überschrift anders?}
 Bei der Umsetzung unserer Android Applikation, hatten wir die Entscheidung, wie wir die Android App erstellen. 
-Da Android mehrere Programmierarten unterstützt musste Evaluiert werden welche Programmiermodule für unsere App am Besten geeignet ist. \nextline
+Da Android mehrere Programmierarten unterstützt musste evaluiert werden welche Programmiermodule für unsere App am Besten geeignet ist. \nextline
 
 \textbf{Native\newline} 
-Eine Native App wird fuer die IOS und Android Plattformen verwendet wobei die Programmiersprachen dafür Objektiv C und Java sind.
-Native Apps Performen am Besten.
-Die Dokumentation zu Native Apps ist am Besten, da es über 2500 Bücher zu IOS und Android entwicklung gibt.
-Fuer Nativ Apps werden sogennante Entwicklungsumgebungen oder auch genannt IDE verwendet um auf denen die gewünschte App zu Programmieren.\nextline
+Für native Apps wird auf der Android-Plattform die Sprache Java verwendet.
+Native Apps zeigen die beste Performance.
+Die Dokumentation zu Native Apps ist am Besten, da es über 2500 Bücher zur Android Entwicklung gibt.
+Für Nativ Apps werden Entwicklungsumgebungen-IDE(Integrated Developement Enviroment) verwendet um die gewünschte App zu Programmieren.\nextline
 
 \textbf{HTML5\newline} 
-HTML5 verwendet die Standard web Technologien, wie HTML5, JavaScript und CSS. Das gute an HTML5 Apps ist, dass es auf verschiedenen Plattformen verwendet werden kann.\nextline
+HTML5 verwendet die Standard Web Technologien, wie JavaScript und CSS.
+HTML5 Applikationen werden über Browser abgespielt, wobei jedes Gerät auf die Browser zugreifen kann und dadurch die App auf mehreren Plattformen abgespielt werden kann. \nextline
 
 \textbf{Hybrid\newline} 
-Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden, schön gebaute CSS layout und das schreiben kompatible HTML-Code, der auf jeder Plattform funktioniert.\nextline
+Hybrid Apps sind eine Mischung aus nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden Welten. Das Design wird mittels HTML5 und CSS erstellt, wobei sich dahinter ein JavaScript-Code befindet. Hybrid Apps sind genauso auf jede Plattform abspielbar, wobei sie für die Plattform entsprechend umprogrammiert müssten.    
+\nextline
 
 \clearpage % DO NOT REMOVE
