--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -1,16 +1,15 @@
 \lfoot{Autor: Faiku Fitim}
 \subsection{Das Projekt BestShift}
 
-BestShift ist ein Projekt das dem Fahrer als oberstes Ziel mehr Informationen während- und nach der Fahrt bieten soll. 
-Deshalb werden in unterschiedlichen Teilen des Projektes 
+BestShift ist ein Projekt, welches dem Fahrer Informationen während- und nach der Fahrt bieten soll. 
+Dazu werden in unterschiedlichen Teilen des Projektes 
 diverse einzelne Komponenten einer hybriden Android Applikation und einer Hardware Schnittstelle für das ODB-II 
-Interface entwickelt. Der Fokus des Medientechnischen Aspektes dieses Projektes soll allerdings auf der Webapplikation, die das Team ebenfalls realisiert hat. 
-Die Web-App ist dafür gedacht, dass Fahrten retrospektiv betrachtet werden können.
-Wodurch wir uns besonders hervorheben ist, dass wir das anlegen und verwalten von Accounts ermöglichen welches mit einer Social-Media Anbindung ausgestattet ist.
+Interface entwickelt. 
+Eine zusätzliche Web-App ermöglicht es, Fahrten retrospektiv zu betrachten und während der Fahrt gesammelte Daten innerhalb eines sozialen Netzwerkes zu teilen.
  
 
 Für die Smartphone Applikation wird ein Android Framework verwendet, 
-während die Hardware aus einem Single Board Computer (SBC) bestehen soll. Somit wird dem Nutzer ein genauerer Einblick in sein Fahrstil verschafft. 
+während die Hardware aus einem Single Board Computer (SBC) bestehen soll. 
 Mittels einem ODB-II zu Bluetooth Chip (ELM237) und Python, 
 werden Daten aus dem Motormanagement sowie eigene Sensordaten, welche in einem selbstgemachtem Car-PC eingebaut sind,
 gesammelt und aufbereitet. 
