--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
@@ -2,18 +2,18 @@
 \subsubsection{Kompatible Geräte}
 \label{subsec:device-compability}
 
-Android kann auf vielen verschiedenen Plattformen, von Handys zu Tabletts laufen.
+Android kann auf vielen verschiedenen Plattformen, wie Handys oder Tabletts laufen.
 Als Entwickler bietet die Palette von Geräten ein enormes potenzielles Publikum.
-Um auf all diesen Oberflächen reibungslos zu funktionieren sollte es einige Feature Variabilitäten tolerieren und eine 
+Um auf all diesen Oberflächen reibungslos zu funktionieren muss eine App einige Feature Variabilitäten tolerieren und eine 
 flexible Benutzeroberfläche zur Verfügung stellen. 
 
 Um das zu ermöglichen bietet Android die Möglichkeit, verschiedene XML Layouts zu erstellen um verschiedene Bildschirmgrößen anzusprechen.
 
-Beim Programmieren der App, kann auch die Minimum und Maximum Version des Devices eingestellt werden, wobei wir hier eine größere Menge an Nutzern erzielen wollen. 
+Beim Programmieren der App kann auch die minimale und maximale kompatible Android-Version des Devices eingestellt werden, wobei hier eine möglichst umfangreiche Auswahl der Versionen einen größeren Umfang an Nutzern erzielt.
 
 \begin{figure}[!htb]\centering
 	\includegraphics[width=1.0 \textwidth]{images/MinMaxVers}
-	\caption{Version}\label{Fig:Version}
+	\caption{Version}\label{Fig:min-max Version}
 \end{figure}
 
 
