--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -468,3 +468,35 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://www.amazon.de/DS1621-1621-DS1620-Temperatursensor-%20Digitalthermometer/dp/B014I80CGQ/ref=sr_1_1?ie=UTF8&qid=1459344658&sr=8-%201&keywords=DS1621}",
     note = {Accessed on 31.03.2016}
 }
+
+@misc{SIMR.CH1-fahrstil-analyse.GewohnheitenLoslassen, 
+    author = {Vera's Viewpoint},
+    year = {2014},
+    title = {Gewohnheiten loslassen \& Ziele erreichen},
+    howpublished = "\url{https://www.runtastic.com/blog/de/veras-viewpoint/ziele-erreichen/}",
+    note = {Accessed on 05.04.2016}
+}
+
+@misc{SIMR.CH1-fahrstil-analyse.PeerPressure, 
+    author = {Lisa K. Carden Smith, Susan A. Fowler},
+    year = {2014},
+    title = {Positive Peer Pressure: The Effects of Peer Monitoring on Children's Disruptive behavior, p. 223},
+    howpublished = "\url{http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1307935/pdf/jaba00032-0089.pdf}",
+    note = {Accessed on 05.04.2016}
+}
+
+@misc{SIMR.CH1-fahrstil-analyse.Normzyklus, 
+    author = {driver, Heise-Online Forum Nutzer},
+    year = {2015},
+    title = {VW-Skandal erschüttert Autobranche - Daimler: sind nicht betroffen, Kommentare},
+    howpublished = "\url{http://www.heise.de/forum/heise-online/News-Kommentare/VW-Skandal-erschuettert-Autobranche-Daimler-sind-nicht-betroffen/Normzyklus-Grenzwertproblem-und-deutsche-Ingenieurskunst/posting-23732697/show/}",
+    note = {Accessed on 05.04.2016}
+}
+
+@misc{SIMR.CH1-fahrstil-analyse.MNEFZ, 
+    author = {Lukas Bay},
+    year = {2012},
+    title = {Spritverbrauch wie im Paradies},
+    howpublished = "\url{http://www.handelsblatt.com/auto/test-technik/messverfahren-spritverbrauch-wie-im-paradies/6329916.html}",
+    note = {Accessed on 06.04.2016}
+}
