--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -62,10 +62,11 @@ Als nächstes haben wir mithilfe der MPAndroidchart Library einige Graphen erste
 
 \lstinputlisting[caption=Liniendiagramm Beispiel, style=javastyle]{code/Beschleunigungskraefte.java}
 
-\begin{wrapfigure}{r}{0.6\textwidth}
+\begin{wrapfigure}{r}{0.4\textwidth}
 	\centering
 	\includegraphics[width=0.5\textwidth]{images/Liniendiagramm}
 	\caption{Beschleunigungskräfte Längstrichtung }
 \end{wrapfigure}
+Das Liniendiagramm wurde mittels der MPAndroidChart Libary erstellt. Die Linien werden Blau gezeichnet und die einzelnen Punkte schwarz.
 
 \clearpage % DO NOT REMOVE
