Etwas eingefügt zu bestshift und fahrkommfort

--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -15,4 +15,18 @@ werden Daten aus dem Motormanagement sowie eigene Sensordaten, welche in einem s
 gesammelt und aufbereitet. 
 Die gesammelten Daten können dann von dem Smartphone aus in die Cloud geladen werden, welche dann durch unsere
 Webapplikation genauer inspiziert werden können.
+
+\newline
+In diesem Projekt wird eine Applikation für das mobile Betriebssystem Android implementiert, 
+die dem Fahrer eines KFZ während der Fahrt Informationen zu Fahrgastbequemlichkeit und verbrauchseffizienter Fahrweise gibt. 
+Dazu werden Daten aus dem Motormanagement verwendet. 
+Für weitere benötigte Daten (z.B. Beschleunigungswerte) werden zusätzliche externe Sensoren in einem portablen CarPC integriert. 
+Das Herzstück des Projektes ist aber die Webapplikation, die die Retrospektive Fahrtenanalyse und eine Social Media implentierung beinhaltet.
+Diese Webapplikation wird die Möglichkeit bieten, die gesammelten Daten aller gespeicherten 
+Fahrten für spätere Analysen graphisch einfach aufbereitet anzuzeigen. 
+Die einzelnen Messwerte sollen dabei mit geographischen Informationen verknüpft werden, 
+um dem Fahrer zum Beispiel zu zeigen, welche Stellen der Strecke besonders verbrauchsintensiv oder unbequem für den Fahrgast waren. 
+
+Als weitere Funktion soll die Applikation aus den ermittelten Daten dem Fahrer den 
+momentan am energieeffizientesten oder leistungsstärksten Gang vorschlagen können.
 \clearpage % DO NOT REMOVE
