--- a/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
@@ -7,6 +7,8 @@
 \input{sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex}
 
 \subsection{Hardware und Sensorik}
+\input{sections/ch2_technische_grundlagen/hardware-sensorik/einleitung.tex}
+\input{sections/ch2_technische_grundlagen/hardware-sensorik/vorhandene_umsetzung.tex}
 \input{sections/ch2_technische_grundlagen/hardware-sensorik/singleboard.tex}
 \input{sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex}
 \input{sections/ch2_technische_grundlagen/hardware-sensorik/i2c.tex}
