--- a/diplomarbeit/sections/ch4_wirtschaftlichkeit/vermarktung.tex
+++ b/diplomarbeit/sections/ch4_wirtschaftlichkeit/vermarktung.tex
@@ -1,10 +1,11 @@
 \lfoot{Autor: Tobias Perny}
-\subsection{Vermarktnug des Projekts}
+\subsection{Vermarktung des Projekts}
 
 Zur Vermarktung des Projektes hat sich das Team mehrere Varianten überlegt.
 \nextline
 Beispielsweise könnte die Verbindung mit einem Speditionsunternehmen oder einer Fahrschule aufgebaut werden, um unser Produkt in Umlauf zu bringen.
 \nextline
-Eine weitere Überlegung des Teams war es, eine Anbindung an soziale Netzwerke, wie Facebook, zu Implementieren. Somit ist es jedem Benutzer der App möglich, eine abgeschlossene Fahrt, online darzustellen. Mithilfe dieser Funktion ist es möglich, schnell und einfach, Werbung für das Projekt zu machen.
+Es wurde eine Anbindung an soziale Netzwerke, wie Facebook, Implementiert. Somit ist es jedem Benutzer der App möglich, eine abgeschlossene Fahrt online darzustellen. Mithilfe dieser Funktion ist es möglich, schnell und einfach, Werbung für das Projekt zu machen.
+
 
 \clearpage % DO NOT REMOVE
