--- a/diplomarbeit/sections/ch3_implementierung/carpc.tex
+++ b/diplomarbeit/sections/ch3_implementierung/carpc.tex
@@ -1,23 +1,84 @@
 \lfoot{Autor: Tobias Perny}
 \subsection{Car-PC}
 
-\subsubsection{Single-Board-PC}
-Eine Wichtige Komponente dieses Projektes ist der Car-PC und die darin verwendeten Bauteile. Das wichtigste hierbei ist der Single-Board-PC \textit{Einplatinencomputer}, alle anderen Komponenten hängen von diesem ab.
+Da nicht alle notwendigen Daten direkt aus der OBDII Schnittstelle ausgelesen werden können, wird ein PC gebaut, welcher in die Mittelkonsole eines KFZ integriert werden kann.
+Dieser PC soll einen Single-Board PC und Sensoren enthalten, welche eben diese Daten über eine Bluetooth Verbindung an ein Smartphone senden kann.
+
+\subsubsection{Single-Board-Computer}
+Eine wichtige Komponente des Car-PC's ist der Single-Board-Computer \textit{Einplatinencomputer oder SBC}, alle anderen Komponenten hängen von diesem ab.
 
 \textbf{Ziele\newline}
-Der PC muss in der Lage sein einen Temperatursensor und einen Beschleunigungssenor auslesen zu können. Er benötigt eine Bluetooth-Schnittstelle, eine Internetverbindung und ausreichend Speicher damit alle gesammelten Daten einer Autofahrt in einer Datenbank gespeichert werden können.
+Für die Auswahl der Hardware für den Car-PC wurden folgende Kriterien in Betracht gezogen:
+\begin{itemize}
+\item Der PC muss Sensoren direkt ansprechen können und dafür notwendige Schnittstellen anbieten:
+\begin{itemize}
+\item Internet
+\item Bluetooth
+\end{itemize}
+\item  Der PC muss in die Mittelkonsole eines KFZ eingebaut werden können. Dadurch ergeben sich maximale Maße: 
+\begin{itemize}
+\item Breite 6.5 cm
+\item Länge 18 cm
+\item Tiefe 5 cm
+\end{itemize}
+\item Er muss Ausreichend Speicher damit alle gesammelten Daten einer Autofahrt in einer Datenbank gespeichert werden können.
+\end{itemize}
 
-Der PC muss in die Mittelkonsole eines KFZ eingebaut werden können. Damit ergeben sich folgende Maße: Breite 6.5 cm, Länge 18 cm, Tiefe 5 cm.
+
+\textbf{Realisierung\newline}
+Lösungsansatz
+Es wurden grundsätzlich zwei Lösungsansätze in Betracht gezogen.
+
+\begin{itemize}
+\item Ansatz 1: Tinkerforge RED Brick
+Der RED Brick von Tinkerforge ist ein Single-Board PC mit vielen Funktionen.
+Mithilfe des RED Bricks ist es möglich andere Bricklets der Firma über eine proprietäre schnittstelle anzusteuern und somit Daten auszulesen.
+Mit dieser Lösung ist es also möglich ein „Temperatur“ und ein „Beschleunigungs-Bricklet“ an den RED Brick anzuschließen und somit alle notwendigen Daten der Fahrt speichern.
+Er ünterstützt außerdem ein breites Spektrum an Programmiersprachen.
+[Quelle: https://www.tinkerforge.com/de/shop/bricks/red-brick.html]
+
+\item Ansatz 2: Raspberry PI 2 Modell B
+Der Raspberry PI 2B ist das Modell der jüngsten Generation des Raspberry PI. Er besitzt einen 900MHz quad-core Prozessor und 1 Gigabyte RAM. Darüber hinaus hat er 4 USB Ports und einen HDMI Anschluss. Durch seine 40 GPIO pins ist es möglich über i²C jeden damit kompatiblen Sensor anzuschließen und somit die benötigten Daten der Fahrt zu speichern.
+Der Raspberry PI 2B unterstützt weniger Programmiersprachen als der RED Brick von Tinkerforge.
+\end{itemize}
+
+\textbf{Umsetzung\newline}
+Es wurde der Raspberry PI zum umsetzen des Projektes gewählt aufgrund folgender Tatsachen:
+Modularität:
+Wir sind dank der GPIO pins des Raspberry PI nicht auf andere Geräte derselben Firma angewiesen und können jeden Sensor verwenden, der mit diesen GPIO Pins kommunizieren kann.
+Peripherie:
+Der Raspberry PI 2B besitzt 4 USB Ports. Mithilfe dieser Ports ist es möglich Bluetooth-Adapter und WLAN-Adapter, anzuschließen.
+
+\textbf{Wirtschaftlichkeit\newline}
+Der Raspberry PI 2B kostet 34,99€ bei einem offiziellen Anbieter der Firma.
+https://www.element14.com/community/community/raspberry-pi
+Der Preis des „RED Brick“ beträgt 69,99€ beim Anbieter direkt.
+https://www.tinkerforge.com/de/shop/bricks.html
+Das bedeutet der Raspberry PI 2B ist um fast die Häfte günstiger als der RED Brick, und aufgrund der
+Modularität des Raspberry PI können auch billigere Sensoren verwendet werden als beim tinkerforge
+RED Brick.
+
+\subsubsection{Verbaute Sensoren}
+Nicht alle Daten die wir für unsere Android App benötigen, werden von der OBDII Schnittstelle
+zurückgegeben. Um diese zu erhalten müssen zusätzlich zum SBC (Single-Board-Computer) zwei Sensoren im fertig Car-PC enthalten sein.
+\newline
+\textbf{Ziele\newline}
+Die Android App soll in der Lage sein die Beschleunigung in 3 Achsen darzustellen, und dem Benutzer
+die Innenraumtemperatur des Wagens mitzuteilen.
+Hierfür werden ein Beschleunigungssensor und ein Temperatursensor mit dem SBC kommunizieren
+um die gewünschten Werte zu erhalten.
+\newline
 \textbf{Realisierung\newline}
 Da ein Raspberry PI 2B als Hauptplatine gewählt wurde, wissen wir welche Sensoren für dieses Projekt in Frage gekommen sind.
-%\nextline
-Es wurden I2C fähige Sensoren zur Umsetzung des Projektes gewählt, weil der Raspberry Pi dank seiner gpio Pins in der Lage ist mit I2C fähigen Sensoren zu kommunizieren. Da dieser Bus sehr einfach zu konfigurieren ist und diese Art von Sensoren somit sehr leicht zu Handhaben sind.Bei dieser Art von Sensoren gibt es 2 Pins auf welche geachtet werden müssen. Diese haben die Bezeichnungen SDA und SCL. Sobald diese Pins mit denen des Raspberry PI verbunden sind bekommt der Sensor eine Slave Adresse zugewiesen. Mithilfe dieser kann man die Daten auslesen.
+\newline
+Es wurden I2C fähige Sensoren zur Umsetzung des Projektes gewählt, weil der Raspberry Pi dank seiner gpio Pins in der Lage ist mit I2C fähigen Sensoren zu kommunizieren. Da dieser Bus sehr einfach zu konfigurieren ist und diese Art von Sensoren somit sehr leicht zu Handhaben sind.
+Bei dieser Art von Sensoren gibt es 2 Pins auf welche geachtet werden müssen. Diese haben die Bezeichnungen SDA und SCL. Sobald diese Pins mit denen des Raspberry PI verbunden sind bekommt der Sensor eine Slave Adresse zugewiesen. Mithilfe dieser kann man die Daten auslesen.
 \begin{figure}[!htb]\centering
 	\includegraphics[width=0.5\textwidth]{images/sensorendetect}
-	\caption{Hier kann man die zugewiesenen Adressen der Sensoren erkennen: 4f und 68}\label{Fig:imgSensorDetect}
+	\caption{Beispielhafte Ausgabe von am I2C-Bus erkannten Slave-Devices mit den Adressen 4f und 68}\label{Fig:imgSensorDetect}
 \end{figure}
 
-Konkret besitzt der Car-PC einen GY521 Beschleunnigungssensor und einen DS1621 Temperatursensor. Diese beiden sind für insgesamt etwa 15€ (Stand 04 2016 [amazonquelle]) Online erhältlich.
+Konkret wurden ein GY521 Beschleunnigungssensor und ein DS1621 Temperatursensor im Car-PC verbaut. Diese beiden sind für insgesamt etwa 15€ (Stand 04 2016 [amazonquelle]) Online erhältlich.
 
 \begin{figure}[!htb]\centering
    \begin{minipage}{0.49\textwidth}
@@ -30,8 +91,7 @@ Konkret besitzt der Car-PC einen GY521 Beschleunnigungssensor und einen DS1621 T
    \end{minipage}
 \end{figure}
 
-Da nicht alle notwendigen Daten direkt aus der OBDII Schnittstelle ausgelesen werden können, wird ein PC gebaut, welcher in die Mittelkonsole eines KFZ integriert werden kann.
-Dieser PC soll einen Single-Board PC und Sensoren enthalten, welche eben diese Daten über eine Bluetooth Verbindung an ein Smartphone senden kann.
+
 
 
 \clearpage % DO NOT REMOVE
